# pedantic-drip

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  README_FOR_DEV.md  dst.db  validate.sh
plugins/iflow/: README.md  pyproject.toml
plugins/iflow/.claude-plugin/: plugin.json
plugins/iflow/commands/: abandon-feature.md  add-to-backlog.md  cleanup-brainstorms.md  create-feature.md  create-plan.md  create-project.md  create-specialist-team.md  create-tasks.md  finish-feature.md  implement.md  list-features.md  secretary.md  show-status.md
plugins/iflow/hooks/: hooks.json  meta-json-guard.sh  session-start.sh  start-ui-server.sh  yolo-stop.sh
plugins/iflow/mcp/: bootstrap-venv.sh  entity_server.py  memory_server.py  run-ui-server.sh  run-workflow-server.sh  test_bootstrap_venv.sh  test_entity_server.sh  test_export_entities.py  test_memory_server.py  test_run_memory_server.sh  test_run_workflow_server.sh  test_search_mcp.py  test_workflow_state_server.py  workflow_state_server.py
plugins/iflow/scripts/: doctor.sh
plugins/iflow/templates/: config.local.md
plugins/iflow/ui/: __init__.py  __main__.py
plugins/pd/: README.md  pyproject.toml
plugins/pd/.claude-plugin/: plugin.json
plugins/pd/agents/: advisor.md  brainstorm-reviewer.md  code-quality-reviewer.md  code-simplifier.md  codebase-explorer.md  design-reviewer.md  documentation-researcher.md  documentation-writer.md  ds-analysis-reviewer.md  ds-code-reviewer.md  generic-worker.md  implementation-reviewer.md  implementer.md  internet-researcher.md  investigation-agent.md  phase-reviewer.md  plan-reviewer.md  prd-reviewer.md  project-decomposer.md  project-decomposition-reviewer.md  ras-synthesizer.md  (+9 more)
(+1350 files in other folders)
