[project]
name = "iflow-dev-hooks"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128.3",
    "jinja2>=3.1.6",
    "numpy>=1.24,<3",
    "python-dotenv>=1.0,<2",
    "uvicorn>=0.34",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0,<2"]
gemini = ["google-genai>=1.0,<2"]
voyage = ["voyageai>=0.3,<1"]
openai = ["openai>=1.0,<3"]
ollama = ["ollama>=0.4,<1"]

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10",
    "pytest-asyncio>=1.3.0",
]
