[project]
name = "pd-dev-hooks"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.3",
    "jinja2>=3.1.6",
    "mcp>=1.0,<2",
    "numpy>=1.24,<3",
    "pydantic>=2.11,<3",
    "pydantic-settings>=2.5,<3",
    "python-dotenv>=1.0,<2",
    "uvicorn>=0.34",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
markers = [
    "benchmark: opt-in performance stress benchmarks (not run by default in validate.sh)",
]
